Commit to add splash screen and reduce minSdk version to 29

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="title_activity_map">MapActivity</string>
     <string name="hint_projectLatitude">Project Latitude</string>
     <string name="hint_projectLongitude">Project Longitude</string>
+    <string name="designed_by">Designed By Andrew Cameron</string>
+    <string name="splash_image">Splash Image</string>
 
 </resources>
