--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,13 @@
     <string name="hint_projectLongitude">Project Longitude</string>
     <string name="designed_by">Designed By Andrew Cameron</string>
     <string name="splash_image">Splash Image</string>
+    <string name="new_project">Add New Project</string>
+    <string name="menu_portfolio_delete">Portfolio Delete</string>
+    <string name="edit_portfolio_details">Edit Portfolio Details</string>
+    <string name="portfolio_title_label">Portfolio Title</string>
+    <string name="portfolio_description_label">Portfolio Description</string>
+    <string name="new_portfolio_label">New Portfolio</string>
+    <string name="portfolios_label">Portfolios</string>
+    <string name="menu_project_delete">Project Delete</string>
 
 </resources>
