Commit to include project map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="button_addPortfolio">Add Portfolio</string>
     <string name="hint_portfolioTitle">Portfolio Title</string>
     <string name="hint_portfolioDescription">Description </string>
-    <string name="menu_addPortfolio">Add</string>
+    <string name="menu_addPortfolio">Add Portfolio</string>
     <string name="menu_cancelPortfolio">Cancel</string>
     <string name="enter_portfolio_title"> Please enter a Portfolio Title </string>
     <string name="save_portfolio"> Save Portfolio </string>
@@ -32,5 +32,11 @@
     <string name="new_portfolio_label">New Portfolio</string>
     <string name="portfolios_label">Portfolios</string>
     <string name="menu_project_delete">Project Delete</string>
+    <string name="title_activity_project_maps">ProjectMapsActivity</string>
+    <string name="project_image_placeholder">Project Image</string>
+    <string name="project_title_placeholder">Project Title</string>
+    <string name="project_description_placeholder">Project Description</string>
+    <string name="menu_viewProjects">View Projects</string>
+    <string name="portfolio_projectList">List of Projects</string>
 
 </resources>
